# blop-lang

./: .gitignore  Cargo.toml  README.md  input.txt  rust.yml  valgrind.supp
.github/workflows/: rust.yml
examples/: backticks.txt  block_as_value.txt  builtins.txt  closing_over_arguments.txt  closing_over_multiple_functions.txt  closing_over_reassigned.txt  closing_over_variables.txt  conditions.txt  enums.txt  fail_prohibit_assignment_to_function_inside_itself.txt  fail_undefined_variable.txt  fail_undefined_variable_inside_function.txt  fib_fact.txt  function_as_value.txt  gc_bench.txt  imports.txt  inline_blocks.txt  lambdas.txt  munchausen.txt  mutual_recursion.txt  operators.txt  optimizations.txt  parens_override_indentation.txt  partials.txt  rectypes.txt  shadowing.txt  simple_assertion.txt  single_function.txt  strings.txt  structures.txt  tail_opt_sum.txt  types.txt  varargs.txt
src/: main.rs  test.rs
src/compile/: code_blob.rs  compiler.rs  lisp_printer.rs  mod.rs  syntax_level_check.rs  syntax_level_opt.rs
src/compile/checks/: constant_folding.rs  expression_lift.rs  mod.rs  name_definition_check.rs  tree_rewriter.rs  tree_visitor.rs  variable_annotation_generation.rs
src/compile/typecheck/: mod.rs  type_builder.rs  typechecker.rs  types.rs
src/data/: gc.rs  marked_counter.rs  mod.rs  objects.rs  short_string.rs  value_ops.rs  values.rs
src/execution/: arity.rs  builtins.rs  chunk.rs  mod.rs  module.rs  test_vm.rs  vm.rs
src/parsing/: ast.rs  lexer.rs  parser.lalrpop  parser.rs
std/: loops.txt  option.txt
