[package]
name = "kursovaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.7.0"
indexmap = "1.7.0"
lazy_static = "1.4.0"

[features]
default = ["print-chunk"]
print-chunk = []
print-tokens = []
print-ast = []
print-execution = []
bench = []
debug-gc = []
