[package]
name = "blop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
indexmap = "1.8.0"
lazy_static = "1.4.0"
regex = "1"
nohash-hasher = "0.2.0"
ordered-float = "2.0"

[dev-dependencies]
rstest = "0.12.0"

[features]
default = ["typecheck"]
print-chunk = []
print-tokens = []
print-ast = []
print-execution = []
bench = []
debug-gc = []
verbose-gc = []
typecheck = []
